Fixed text align for mobile

--- a/css/z-mobile.css
+++ b/css/z-mobile.css
@@ -12,6 +12,7 @@
   .banner-text {
     margin-top: 0px;
     margin: auto;
+    text-align: center;
   }
   #title_display {
     text-align: center;
